[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtspy"
version = "0.1.0"
description = "Python client for the Data Transfer Service"
authors = [
  { name = "Jeffrey N. Johnson", email = "jeff@cohere-llc.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "frictionless>=5.17.0,<6",
  "requests>=2.32.3,<3",
]

[tool.uv]
dev-dependencies = [
  "coverage >=7.6.3,<8",
  "mkdocs-material>=9.5.41",
  "mkdocs>=1.6.1",
  "mkdocstrings-python>=1.12.1",
  "mkdocstrings>=0.26.2",
]
